--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,15 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2",
     "styled-components": "^5.0.1",
-    "axios": "^0.19.2"
+    "typescript": "~3.7.2"
   },
   "devDependencies": {
     "@babel/types": "^7.8.3",
