--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,30 @@
   "private": true,
   "dependencies": {
     "@datepicker-react/styled": "^2.3.1",
+    "@devexpress/dx-react-core": "^2.5.0",
+    "@devexpress/dx-react-grid": "^2.5.0",
+    "@devexpress/dx-react-grid-bootstrap4": "^2.5.0",
+    "@devexpress/dx-react-grid-export": "^2.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-input-mask": "^2.0.5",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
