--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -9,8 +9,9 @@
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "alwaysStrict": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "strictNullChecks": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
