--- a/server/.gitignore
+++ b/server/.gitignore
@@ -8,7 +8,7 @@
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
-
+*lock.json
 # KDE directory preferences
 .directory
 
